[gd_scene load_steps=18 format=2]

[ext_resource path="res://Images/PauseButtonImage-01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayPauseButton.gd" type="Script" id=2]
[ext_resource path="res://Images/TimeImage-01.png" type="Texture" id=3]
[ext_resource path="res://Font Styles/BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/ScoreSizeCalculator.gd" type="Script" id=5]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=6]
[ext_resource path="res://Images/Light2D-01.png" type="Texture" id=7]
[ext_resource path="res://Images/MainMenuButton-01.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.203922, 0.976471, 0.945098, 0 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 4 )

[node name="GamePlayUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayPauseButton" type="TextureButton" parent="."]
self_modulate = Color( 0, 1, 0.8, 1 )
margin_left = 490.0
margin_top = 60.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="RemainTimeIndicator" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 60, 105 )

[node name="Indicator1" type="TextureRect" parent="RemainTimeIndicator"]
self_modulate = Color( 0.94902, 0.576471, 0.172549, 1 )
anchor_right = 1.0
margin_top = -45.0
margin_right = 37.0
margin_bottom = -8.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Indicator2" type="TextureRect" parent="RemainTimeIndicator"]
self_modulate = Color( 0.94902, 0.576471, 0.172549, 1 )
anchor_right = 1.0
margin_left = 30.0
margin_top = -45.0
margin_right = 67.0
margin_bottom = -8.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Indicator3" type="TextureRect" parent="RemainTimeIndicator"]
self_modulate = Color( 0.94902, 0.576471, 0.172549, 1 )
anchor_right = 1.0
margin_left = 60.0
margin_top = -45.0
margin_right = 97.0
margin_bottom = -8.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Indicator4" type="TextureRect" parent="RemainTimeIndicator"]
self_modulate = Color( 0.94902, 0.576471, 0.172549, 1 )
anchor_right = 1.0
margin_left = 90.0
margin_top = -45.0
margin_right = 127.0
margin_bottom = -8.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="PassButton" type="TextureButton" parent="."]
margin_top = 200.0
margin_right = 600.0
margin_bottom = 1066.0

[node name="Score" type="Node2D" parent="."]
light_mask = 0
position = Vector2( 300, 363 )
z_index = 3

[node name="ScoreLabel" type="Label" parent="Score"]
self_modulate = Color( 0, 0.498039, 0.478431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -76.0
margin_right = 62.0
margin_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true
max_lines_visible = 1
script = ExtResource( 5 )

[node name="PauseMenu" type="Node2D" parent="."]
visible = false
position = Vector2( 300, 363 )
z_index = 8
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="PauseMenu"]
self_modulate = Color( 0, 1, 0.8, 0.941176 )
light_mask = 0
margin_left = -240.0
margin_top = -240.0
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 7 )

[node name="RestartButton" type="TextureButton" parent="PauseMenu"]
self_modulate = Color( 0.980392, 0.988235, 0.890196, 1 )
margin_left = -105.0
margin_top = -80.0
margin_right = 105.0
margin_bottom = -14.0
texture_normal = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/RestartButton"]
self_modulate = Color( 0.0156863, 0.960784, 0.772549, 1 )
margin_right = 210.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
align = 1
valign = 1

[node name="MainMenuButton" type="TextureButton" parent="PauseMenu"]
self_modulate = Color( 0.980392, 0.988235, 0.890196, 1 )
margin_left = -105.0
margin_top = 20.0
margin_right = 105.0
margin_bottom = 86.0
texture_normal = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/MainMenuButton"]
self_modulate = Color( 0.0156863, 0.960784, 0.772549, 1 )
margin_right = 210.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
align = 1
valign = 1

[node name="EndGameMenu" type="Node2D" parent="."]
visible = false
position = Vector2( 300, 363 )
z_index = 8
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="EndGameMenu"]
self_modulate = Color( 0.94902, 0.576471, 0.172549, 0.941176 )
light_mask = 0
margin_left = -240.0
margin_top = -240.0
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 7 )

[node name="FinalScore" type="Label" parent="EndGameMenu"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_left = -150.0
margin_top = 310.0
margin_right = 150.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 4 )
text = "Final Score"
align = 1
valign = 1

[node name="HighestScore" type="Label" parent="EndGameMenu"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_left = -150.0
margin_top = 470.0
margin_right = 150.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 5 )
text = "Highest Score"
align = 1
valign = 1

[node name="RestartButton" type="TextureButton" parent="EndGameMenu"]
self_modulate = Color( 0.980392, 0.988235, 0.890196, 1 )
margin_left = -105.0
margin_top = -91.037
margin_right = 105.0
margin_bottom = -25.037
texture_normal = ExtResource( 8 )

[node name="Label" type="Label" parent="EndGameMenu/RestartButton"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_right = 210.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 6 )
text = "Restart"
align = 1
valign = 1

[node name="MainMenuButton" type="TextureButton" parent="EndGameMenu"]
self_modulate = Color( 0.980392, 0.988235, 0.890196, 1 )
margin_left = -105.0
margin_top = 20.0
margin_right = 105.0
margin_bottom = 86.0
texture_normal = ExtResource( 8 )

[node name="Label" type="Label" parent="EndGameMenu/MainMenuButton"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_right = 210.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 7 )
text = "Main Menu"
align = 1
valign = 1

[node name="FinalScoreText" type="Label" parent="EndGameMenu"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_left = -95.0
margin_top = 270.0
margin_right = 95.0
margin_bottom = 326.0
custom_fonts/font = SubResource( 8 )
text = "FINAL SCORE"
align = 1
valign = 1

[node name="HighestScoreText" type="Label" parent="EndGameMenu"]
self_modulate = Color( 0.909804, 0.560784, 0.180392, 1 )
margin_left = -95.0
margin_top = 430.0
margin_right = 95.0
margin_bottom = 486.0
custom_fonts/font = SubResource( 9 )
text = "HIGHEST SCORE"
align = 1
valign = 1
[connection signal="button_up" from="PlayPauseButton" to="PlayPauseButton" method="_on_PlayPauseButton_button_up"]
[connection signal="scoreChanged" from="Score/ScoreLabel" to="Score/ScoreLabel" method="ChangeSize"]
[connection signal="button_up" from="PauseMenu/RestartButton" to="PauseMenu" method="_on_RestartButton_button_up"]
[connection signal="button_up" from="PauseMenu/MainMenuButton" to="PauseMenu" method="_on_MainMenuButton_button_up"]
[connection signal="button_up" from="EndGameMenu/RestartButton" to="EndGameMenu" method="_on_RestartButton_button_up"]
[connection signal="button_up" from="EndGameMenu/MainMenuButton" to="EndGameMenu" method="_on_MainMenuButton_button_up"]
